--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
       </h2>
       <div class="references-grid">
         <div class="reference-item">
-          <h3 class="reference-name">Mr. Gédeon NSINSI</h3>
+          <h3 class="reference-name">Mr. Gédeon NSISI</h3>
           <p class="reference-title">Sécretaire géneral Administratif - Honu University</p>
           <p class="reference-desc">
             Encadreur lors du stage académique 2023-2024. Peut témoigner de mes compétences en gestion administrative,
@@ -726,3 +726,4 @@
 
 
 </html>
+
