--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <div class="proficiency-bar">
             <div class="proficiency-level" style="width: 90%"></div>
           </div>
-          <p class="proficiency-text">Bon niveau - Courant</p>
+          <p class="proficiency-text">Bon niveau - Langue maternelle</p>
         </div>
 
         <div class="language-item">
@@ -217,7 +217,7 @@
           <div class="proficiency-bar">
             <div class="proficiency-level" style="width: 95%"></div>
           </div>
-          <p class="proficiency-text">Excellent - Langue maternelle</p>
+          <p class="proficiency-text">Courant </p>
         </div>
 
         <div class="language-item">
@@ -726,4 +726,5 @@
 
 
 </html>
+
 
